# actix-template

./: Cargo.toml  Dockerfile  Makefile  README.md
src/: error.rs  handlers.rs  main.rs
static/: custom.css  particles.js
templates/: footer.html  hello.html  main.html  nav.html  posts.html
